--- a/yelp_exploration.ipynb
+++ b/yelp_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,9 @@
     "import string\n",
     "import re\n",
     "from nltk.stem import WordNetLemmatizer\n",
-    "from nltk.tokenize import word_tokenize"
+    "from nltk.tokenize import word_tokenize\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -1296,14 +1298,14 @@
    "source": [
     "dict_pos = {}\n",
     "dict_neg = {}\n",
-    "for list,star in zip(yelp_reviews.loc[:,'text'], yelp_reviews.loc[:,'starsv1']):\n",
+    "for list_w, star in zip(yelp_reviews.loc[:,'text'], yelp_reviews.loc[:,'starsv1']):\n",
     "    if  star == 1:\n",
-    "        for word in list:\n",
+    "        for word in list_w:\n",
     "            if word not in dict_pos:\n",
     "                dict_pos[word] = 0\n",
     "            dict_pos[word] += 1\n",
     "    else:\n",
-    "        for word in list:\n",
+    "        for word in list_w:\n",
     "            if word not in dict_neg:\n",
     "                dict_neg[word] = 0\n",
     "            dict_neg[word] += 1\n",
@@ -1313,32 +1315,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cumulative_count(list_tokens):\n",
-    "    dict_tot = {'pos' : 0, 'neg' : 0}\n",
+    "def cumulative_count(list_tokens, pos_dict, neg_dict):\n",
+    "    pos = 0\n",
+    "    neg = 0\n",
     "    for word in list_tokens:\n",
     "        if word in dict_pos:\n",
-    "            dict_tot['pos'] += dict_pos[word]\n",
+    "            pos += dict_pos[word]\n",
     "        if word in dict_neg:\n",
-    "            dict_tot['neg'] += dict_neg[word]\n",
-    "    return dict_tot"
+    "            neg += dict_neg[word]\n",
+    "        if len(pos) + len(neg) != 2:\n",
+    "            print(pos,neg)\n",
+    "            break\n",
+    "    return (pos, neg)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
-    "yelp_reviews.loc[:,'cum_count'] = yelp_reviews.loc[:,'text'].apply(lambda x: cumulative_count(x))"
+    "def cumulative_count(list_tokens, pos_dict, neg_dict):\n",
+    "    count_dict = {'pos':0, 'neg':0}\n",
+    "    for word in list_tokens:\n",
+    "        if word in pos_dict:\n",
+    "            count_dict['pos'] += pos_dict[word]\n",
+    "        if word in neg_dict:\n",
+    "            count_dict['neg'] += neg_dict[word]\n",
+    "    return count_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yelp_reviews.loc[:,'cum_count'] = yelp_reviews.loc[:,'text'].apply(lambda x: cumulative_count(x, dict_pos, dict_neg))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -1368,9 +1390,8 @@
        "      <th>funny</th>\n",
        "      <th>cool</th>\n",
        "      <th>starsv1</th>\n",
-       "      <th>dict_pos</th>\n",
-       "      <th>dict_neg</th>\n",
-       "      <th>cum_count</th>\n",
+       "      <th>poscount</th>\n",
+       "      <th>neg</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1382,9 +1403,8 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>{'pos': 1869867, 'neg': 1416199}</td>\n",
+       "      <td>1869867</td>\n",
+       "      <td>1416199</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -1394,9 +1414,8 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>{'pos': 1972119, 'neg': 1383590}</td>\n",
+       "      <td>1972119</td>\n",
+       "      <td>1383590</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -1406,9 +1425,8 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>{'pos': 1916005, 'neg': 1382503}</td>\n",
+       "      <td>1916005</td>\n",
+       "      <td>1382503</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
@@ -1418,9 +1436,8 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>{'hubby': 1, 'multiple': 1, 'occasion': 1, 'lo...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>{'pos': 2113310, 'neg': 1334808}</td>\n",
+       "      <td>2113310</td>\n",
+       "      <td>1334808</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
@@ -1430,9 +1447,8 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>{'go': 1, 'blow': 2, 'bar': 1, 'get': 1, 'brow...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>{'pos': 1802551, 'neg': 944659}</td>\n",
+       "      <td>1802551</td>\n",
+       "      <td>944659</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1446,22 +1462,15 @@
        "17  [hubby, multiple, occasion, loved, every, part...      4       1      0   \n",
        "18  [go, blow, bar, get, brow, done, natalie, brow...      5       2      0   \n",
        "\n",
-       "    cool  starsv1                                           dict_pos dict_neg  \\\n",
-       "0      0        0                                               None     None   \n",
-       "8      0        0                                               None     None   \n",
-       "9      0        0                                               None     None   \n",
-       "17     0        1  {'hubby': 1, 'multiple': 1, 'occasion': 1, 'lo...     None   \n",
-       "18     1        1  {'go': 1, 'blow': 2, 'bar': 1, 'get': 1, 'brow...     None   \n",
-       "\n",
-       "                           cum_count  \n",
-       "0   {'pos': 1869867, 'neg': 1416199}  \n",
-       "8   {'pos': 1972119, 'neg': 1383590}  \n",
-       "9   {'pos': 1916005, 'neg': 1382503}  \n",
-       "17  {'pos': 2113310, 'neg': 1334808}  \n",
-       "18   {'pos': 1802551, 'neg': 944659}  "
+       "    cool  starsv1  poscount      neg  \n",
+       "0      0        0   1869867  1416199  \n",
+       "8      0        0   1972119  1383590  \n",
+       "9      0        0   1916005  1382503  \n",
+       "17     0        1   2113310  1334808  \n",
+       "18     1        1   1802551   944659  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1469,6 +1478,111 @@
    "source": [
     "yelp_reviews.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def split_dict(dict_c, key):\n",
+    "    return dict_c[key]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yelp_reviews.loc[:,'poscount'] = yelp_reviews.loc[:, 'cum_count'].apply(lambda x: split_dict(x,'pos'))\n",
+    "yelp_reviews.loc[:,'neg'] = yelp_reviews.loc[:, 'cum_count'].apply(lambda x: split_dict(x,'neg'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yelp_reviews.drop('cum_count', axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = yelp_reviews.loc[:,['poscount', 'neg', 'useful', 'funny', 'cool']].to_numpy()\n",
+    "y = yelp_reviews.loc[:,'starsv1'].to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = LogisticRegression()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-2 {color: black;background-color: white;}#sk-container-id-2 pre{padding: 0;}#sk-container-id-2 div.sk-toggleable {background-color: white;}#sk-container-id-2 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-2 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-2 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-2 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-2 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-2 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-2 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-2 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-2 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-2 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-2 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-2 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-2 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-2 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-2 div.sk-item {position: relative;z-index: 1;}#sk-container-id-2 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-2 div.sk-item::before, #sk-container-id-2 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-2 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-2 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-2 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-2 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-2 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-2 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-2 div.sk-label-container {text-align: center;}#sk-container-id-2 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-2 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-2\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" checked><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LogisticRegression</label><div class=\"sk-toggleable__content\"><pre>LogisticRegression()</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "LogisticRegression()"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.8139636353232336\n"
+     ]
+    }
+   ],
+   "source": [
+    "score = clf.score(X_test, y_test)\n",
+    "print(f\"Accuracy: {score}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
