Logistic regression checkpoint 2

--- a/yelp_exploration.ipynb
+++ b/yelp_exploration.ipynb
@@ -41,20 +41,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ChatGPT support\n",
-    "# set the file path and chunk size\n",
+    "# setting file path and chunk size\n",
     "file_path = 'data/yelp_academic_dataset_review.json'\n",
     "chunk_size = 1000\n",
     "\n",
-    "# determine the total number of records in the file\n",
+    "#Calculating size of the dataset\n",
     "with open(file_path, 'r', encoding='utf-8') as f:\n",
     "    num_records = sum(1 for line in f)\n",
     "\n",
-    "# determine the indices of the records to load\n",
+    "#Generating a random set of indices to subset\n",
     "subset_size = int(num_records * 0.1)  # load 10% of the records\n",
     "indices = random.sample(range(num_records), subset_size)\n",
     "\n",
-    "# load the random subset of records in chunks\n",
+    "# Loading the rows corresponding to the randomly generated indices\n",
     "chunks = []\n",
     "json_reader = pd.read_json(file_path, lines=True, chunksize=chunk_size)\n",
     "for chunk in json_reader:\n",
@@ -662,6 +661,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    0.671346\n",
+       "0    0.328654\n",
+       "Name: starsv1, dtype: float64"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "yelp_reviews.loc[:,'starsv1'].value_counts(normalize=True)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -1176,33 +1197,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = yelp_reviews.loc[:,['posv1', 'negv1']].to_numpy()\n",
-    "y = yelp_reviews.loc[:,'starsv1'].to_numpy()\n",
-    "clf = LogisticRegression()\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "clf.fit(X_train, y_train)\n",
-    "y_pred = clf.predict(X_test)"
+    "X_rf = yelp_reviews.loc[:,['posv1', 'negv1']].to_numpy()\n",
+    "y_rf = yelp_reviews.loc[:,'starsv1'].to_numpy()\n",
+    "clf_rf = LogisticRegression()\n",
+    "X_train_rf, X_test_rf, y_train_rf, y_test_rf = train_test_split(X_rf, y_rf, test_size=0.2, random_state=42)\n",
+    "clf_rf.fit(X_train_rf, y_train_rf)\n",
+    "y_pred_rf = clf.predict(X_test_rf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
-    "accuracy_v1 = accuracy_score(y_test, y_pred)\n",
-    "precision_v1 = precision_score(y_test, y_pred, average='weighted')\n",
-    "f1_v1 = f1_score(y_test, y_pred, average='weighted')\n",
-    "recall_v1 = recall_score(y_test, y_pred, average='weighted')"
+    "accuracy_rf = accuracy_score(y_test_rf, y_pred_rf)\n",
+    "precision_rf = precision_score(y_test_rf, y_pred_rf, average='weighted')\n",
+    "f1_rf = f1_score(y_test_rf, y_pred_rf, average='weighted')\n",
+    "recall_rf = recall_score(y_test_rf, y_pred_rf, average='weighted')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -1217,10 +1238,10 @@
     }
    ],
    "source": [
-    "print(f\"Accuracy: {accuracy_v1}\")\n",
-    "print(f\"Precision: {precision_v1}\")\n",
-    "print(f\"Recall: {recall_v1}\")\n",
-    "print(f\"F1 Score: {f1_v1}\")"
+    "print(f\"Accuracy: {accuracy_rf}\")\n",
+    "print(f\"Precision: {precision_rf}\")\n",
+    "print(f\"Recall: {recall_rf}\")\n",
+    "print(f\"F1 Score: {f1_rf}\")"
    ]
   },
   {
