Without abs paths

--- a/yelp_exploration.ipynb
+++ b/yelp_exploration.ipynb
@@ -30,9 +30,9 @@
    "outputs": [],
    "source": [
     "#I don't think you guys would need to run this at all\n",
-    "import os\n",
-    "os.getcwd()\n",
-    "os.chdir('d:\\\\Harris Course work\\\\MLPP\\\\ml_proj\\\\obamacare-ml-project')"
+    "# import os\n",
+    "# os.getcwd()\n",
+    "# os.chdir('d:\\\\Harris Course work\\\\MLPP\\\\ml_proj\\\\obamacare-ml-project')"
    ]
   },
   {
