Added Analysis of Tokens

--- a/apply_models.ipynb
+++ b/apply_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,15 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from math import log\n",
+    "from collections import Counter\n",
+    "import ast"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,50 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                    Id       Date   \n",
-      "0  1641893127261945857 2023-03-31  \\\n",
-      "1  1641879286805155848 2023-03-31   \n",
-      "2  1641871341581131777 2023-03-31   \n",
-      "3  1641860778788569094 2023-03-31   \n",
-      "4  1641860772669128705 2023-03-31   \n",
-      "\n",
-      "                                                Text  Month  Year   \n",
-      "0  This affects nearly 168 million people on empl...      3  2023  \\\n",
-      "1  OK so, insurance companies are being given the...      3  2023   \n",
-      "2  Texas judge rules against free preventive care...      3  2023   \n",
-      "3  Texas judge strikes down free HIV drugs, cance...      3  2023   \n",
-      "4  Texas judge strikes down free HIV drugs, cance...      3  2023   \n",
-      "\n",
-      "                                              Tokens   \n",
-      "0  ['affect', 'nearly', '168', 'million', 'people...  \\\n",
-      "1  ['ok', 'insurance', 'company', 'given', 'abili...   \n",
-      "2  ['texas', 'judge', 'rule', 'free', 'preventive...   \n",
-      "3  ['texas', 'judge', 'strike', 'free', 'hiv', 'd...   \n",
-      "4  ['texas', 'judge', 'strike', 'free', 'hiv', 'd...   \n",
-      "\n",
-      "                           Hashtags Handles  \n",
-      "0                                []      []  \n",
-      "1            ['#obamacare', '#aca']      []  \n",
-      "2                                []      []  \n",
-      "3  ['#obamacare', '#aca', '#texas']      []  \n",
-      "4  ['#obamacare', '#aca', '#texas']      []  \n"
-     ]
-    }
-   ],
-   "source": [
-    "print(tweets.head())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,16 +49,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tweets = classify_tweets(classifier, vectorizer, tweets)"
+    "tweets = classify_tweets(classifier, vectorizer, tweets)\n",
+    "tweets['Tokens'] = tweets['Tokens'].apply(ast.literal_eval)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -136,6 +97,91 @@
     "plt.gca().set_xticks(grouped_data.index[::6])\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top tokens associated with positive sentiment:\n",
+      "Token: rt\tFrequency Score: 0.3282788372999008\n",
+      "Token: care\tFrequency Score: 0.2121483373900501\n",
+      "Token: must\tFrequency Score: 0.10677419380803359\n",
+      "Token: al\tFrequency Score: 0.1041507295650942\n",
+      "Token: coronavirus\tFrequency Score: 0.10348187436412574\n",
+      "Token: middle\tFrequency Score: 0.10260704419889503\n",
+      "Token: crisis\tFrequency Score: 0.09742790876250822\n",
+      "Token: woman\tFrequency Score: 0.09701581797576274\n",
+      "Token: read\tFrequency Score: 0.09441318062692372\n",
+      "Token: @speakerpelosi\tFrequency Score: 0.09379942111295703\n",
+      "Top tokens associated with negative sentiment:\n",
+      "Token: aca\tFrequency Score: -0.1083006944712746\n",
+      "Token: said\tFrequency Score: -0.11845707526819405\n",
+      "Token: dont\tFrequency Score: -0.12812717324112352\n",
+      "Token: would\tFrequency Score: -0.12847098803590515\n",
+      "Token: people\tFrequency Score: -0.12939517894628394\n",
+      "Token: obamacareaca\tFrequency Score: -0.1570564938054579\n",
+      "Token: lie\tFrequency Score: -0.15895723463920977\n",
+      "Token: history\tFrequency Score: -0.1758568606807557\n",
+      "Token: worst\tFrequency Score: -0.1986936406135301\n",
+      "Token: insurance\tFrequency Score: -0.24880634731290807\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_token_counts = {}\n",
+    "min_token_counts = {}\n",
+    "all_tokens = set()\n",
+    "\n",
+    "max_tweets = tweets[tweets['Predictions'] == max_prediction]\n",
+    "min_tweets = tweets[tweets['Predictions'] == min_prediction]\n",
+    "\n",
+    "total_max_tweets = len(max_tweets)\n",
+    "total_min_tweets = len(min_tweets)\n",
+    "\n",
+    "for index, row in max_tweets.iterrows():\n",
+    "    tokens = row['Tokens']\n",
+    "    \n",
+    "    for token in tokens:\n",
+    "        max_token_counts[token] = max_token_counts.get(token, 0) + 1\n",
+    "        all_tokens.add(token)\n",
+    "\n",
+    "for index, row in min_tweets.iterrows():\n",
+    "    tokens = row['Tokens']\n",
+    "    \n",
+    "    for token in tokens:\n",
+    "        min_token_counts[token] = min_token_counts.get(token, 0) + 1\n",
+    "        all_tokens.add(token)\n",
+    "\n",
+    "# Now we can create a homemmade metric that indicates which tokens are most\n",
+    "# associated with positive and negative sentiment. We'll just take difference\n",
+    "# in how often a token appears in each dictionary. This helps target the most\n",
+    "# common tokens while still capturing the differences between the dictionaries.\n",
+    "\n",
+    "frequency_scores = {}\n",
+    "\n",
+    "for token in all_tokens:\n",
+    "    min_frequency = min_token_counts.get(token, 0) / total_min_tweets\n",
+    "    max_frequency = max_token_counts.get(token, 0) / total_max_tweets\n",
+    "    frequency_score = max_frequency - min_frequency\n",
+    "    frequency_scores[token] = frequency_score\n",
+    "\n",
+    "sorted_scores = sorted(frequency_scores.items(), key=lambda x: x[1], reverse=True)\n",
+    "\n",
+    "print(\"Top tokens associated with positive sentiment:\")\n",
+    "for token, score in sorted_scores[:10]:\n",
+    "    if score > 0:\n",
+    "        print(f\"Token: {token}\\tFrequency Score: {score}\")\n",
+    "\n",
+    "print(\"Top tokens associated with negative sentiment:\")\n",
+    "for token, score in sorted_scores[-10:]:\n",
+    "    if score < 0:\n",
+    "        print(f\"Token: {token}\\tFrequency Score: {score}\")\n"
    ]
   }
  ],
