Exported Tokenized Twitter Data

--- a/twitter_exp_ep.ipynb
+++ b/twitter_exp_ep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "a502fdf6-df55-440b-bf15-28f0d4a89741",
    "metadata": {
     "tags": []
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "d734f545-4c97-4dbf-b961-fca07370a8d3",
    "metadata": {
     "tags": []
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 5,
    "id": "aa06effb-f5ab-4ef3-9c41-8c0f4cff1412",
    "metadata": {
     "tags": []
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 6,
    "id": "cc12d6f3-d42e-4e71-af6b-f1e471701143",
    "metadata": {
     "tags": []
@@ -183,11 +183,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     /home/eshanprashar/nltk_data...\n",
+      "[nltk_data] Downloading package stopwords to C:\\Users\\Sanjeev\n",
+      "[nltk_data]     HRSCM\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n",
-      "[nltk_data] Downloading package wordnet to\n",
-      "[nltk_data]     /home/eshanprashar/nltk_data...\n",
+      "[nltk_data] Downloading package wordnet to C:\\Users\\Sanjeev\n",
+      "[nltk_data]     HRSCM\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package wordnet is already up-to-date!\n"
      ]
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "id": "0f7c642c-fae2-4754-be4d-eaf1156bd02a",
    "metadata": {
     "tags": []
@@ -241,6 +241,24 @@
     "            all_handles.append(token)\n",
     "        else:\n",
     "            all_tokens.append(token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a76ee5ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Repeating the above but modifying the original tweets dataset for exporting\n",
+    "\n",
+    "# Create new columns for tokens, hashtags, and handles\n",
+    "tweets['Tokens'] = tweets['Text'].apply(lambda x: clean_text(x))\n",
+    "tweets['Hashtags'] = tweets['Tokens'].apply(lambda x: [token for token in x if token.startswith('#')])\n",
+    "tweets['Handles'] = tweets['Tokens'].apply(lambda x: [token for token in x if token.startswith('@')])\n",
+    "\n",
+    "# Export the modified dataset to a CSV file\n",
+    "tweets.to_csv('data/tokenized_tweets.csv', index=False)"
    ]
   },
   {
@@ -660,7 +678,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
