--- a/yelp_exploration.ipynb
+++ b/yelp_exploration.ipynb
@@ -2736,7 +2736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [
     {
@@ -2769,6 +2769,8 @@
        "      <th>tf</th>\n",
        "      <th>tfidfpos</th>\n",
        "      <th>tfidfneg</th>\n",
+       "      <th>tfidfposv2</th>\n",
+       "      <th>tfidfnegv2</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2781,8 +2783,10 @@
        "      <td>-0.438980</td>\n",
        "      <td>[meal, excellent, fresh, many, delicious, cant...</td>\n",
        "      <td>{'recently': 0.02631578947368421, 'dinner': 0....</td>\n",
-       "      <td>12.211797</td>\n",
-       "      <td>11.956019</td>\n",
+       "      <td>0.377364</td>\n",
+       "      <td>0.064940</td>\n",
+       "      <td>-0.229257</td>\n",
+       "      <td>-0.450247</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32</th>\n",
@@ -2793,8 +2797,10 @@
        "      <td>-0.725067</td>\n",
        "      <td>[great, nice, clean, huge]</td>\n",
        "      <td>{'great': 0.045454545454545456, 'staff': 0.090...</td>\n",
-       "      <td>12.305744</td>\n",
-       "      <td>11.810038</td>\n",
+       "      <td>0.676069</td>\n",
+       "      <td>-0.412026</td>\n",
+       "      <td>0.989237</td>\n",
+       "      <td>-0.403182</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>62</th>\n",
@@ -2805,8 +2811,10 @@
        "      <td>1.484193</td>\n",
        "      <td>[disagree, previous, single, coop, great, smal...</td>\n",
        "      <td>{'love': 0.007352941176470588, 'weaver': 0.014...</td>\n",
-       "      <td>12.240731</td>\n",
-       "      <td>12.047542</td>\n",
+       "      <td>0.469361</td>\n",
+       "      <td>0.363974</td>\n",
+       "      <td>-0.385791</td>\n",
+       "      <td>-0.398530</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>72</th>\n",
@@ -2817,8 +2825,10 @@
        "      <td>2.098070</td>\n",
        "      <td>[stl, remorseful, first, st, louis, tour, many...</td>\n",
        "      <td>{'living': 0.0078125, 'stl': 0.0078125, 'area'...</td>\n",
-       "      <td>12.216392</td>\n",
-       "      <td>12.103790</td>\n",
+       "      <td>0.391975</td>\n",
+       "      <td>0.547754</td>\n",
+       "      <td>0.420405</td>\n",
+       "      <td>0.323431</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>79</th>\n",
@@ -2829,8 +2839,10 @@
        "      <td>-0.628690</td>\n",
        "      <td>[disappointed, sandwich, enough, cheese, prepa...</td>\n",
        "      <td>{'visited': 0.038461538461538464, 'disappointe...</td>\n",
-       "      <td>12.255414</td>\n",
-       "      <td>12.006552</td>\n",
+       "      <td>0.516046</td>\n",
+       "      <td>0.230047</td>\n",
+       "      <td>-0.515648</td>\n",
+       "      <td>-0.308558</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2851,21 +2863,217 @@
        "72  2.910960  2.098070  [stl, remorseful, first, st, louis, tour, many...   \n",
        "79 -0.739448 -0.628690  [disappointed, sandwich, enough, cheese, prepa...   \n",
        "\n",
-       "                                                   tf   tfidfpos   tfidfneg  \n",
-       "28  {'recently': 0.02631578947368421, 'dinner': 0....  12.211797  11.956019  \n",
-       "32  {'great': 0.045454545454545456, 'staff': 0.090...  12.305744  11.810038  \n",
-       "62  {'love': 0.007352941176470588, 'weaver': 0.014...  12.240731  12.047542  \n",
-       "72  {'living': 0.0078125, 'stl': 0.0078125, 'area'...  12.216392  12.103790  \n",
-       "79  {'visited': 0.038461538461538464, 'disappointe...  12.255414  12.006552  "
+       "                                                   tf  tfidfpos  tfidfneg  \\\n",
+       "28  {'recently': 0.02631578947368421, 'dinner': 0....  0.377364  0.064940   \n",
+       "32  {'great': 0.045454545454545456, 'staff': 0.090...  0.676069 -0.412026   \n",
+       "62  {'love': 0.007352941176470588, 'weaver': 0.014...  0.469361  0.363974   \n",
+       "72  {'living': 0.0078125, 'stl': 0.0078125, 'area'...  0.391975  0.547754   \n",
+       "79  {'visited': 0.038461538461538464, 'disappointe...  0.516046  0.230047   \n",
+       "\n",
+       "    tfidfposv2  tfidfnegv2  \n",
+       "28   -0.229257   -0.450247  \n",
+       "32    0.989237   -0.403182  \n",
+       "62   -0.385791   -0.398530  \n",
+       "72    0.420405    0.323431  \n",
+       "79   -0.515648   -0.308558  "
       ]
      },
-     "execution_count": 235,
+     "execution_count": 249,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "yelp_reviews.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yelp_reviews.loc[:,'tfidfpos'] = (yelp_reviews.loc[:,'tfidfpos']-yelp_reviews.loc[:,'tfidfpos'].mean())/yelp_reviews.loc[:,'tfidfpos'].std()\n",
+    "yelp_reviews.loc[:,'tfidfneg'] = (yelp_reviews.loc[:,'tfidfneg']-yelp_reviews.loc[:,'tfidfneg'].mean())/yelp_reviews.loc[:,'tfidfneg'].std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 238,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_idf = yelp_reviews.loc[:,['tfidfpos', 'tfidfneg']].to_numpy()\n",
+    "y_idf = yelp_reviews.loc[:,'starsv1'].to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf_idf = LogisticRegression()\n",
+    "X_train_idf, X_test_idf, y_train_idf, y_test_idf = train_test_split(X_idf, y_idf, test_size=0.2, random_state=42)\n",
+    "clf_idf.fit(X_train_idf, y_train_idf)\n",
+    "y_pred_idf = clf_idf.predict(X_test_idf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 241,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5087392620568683"
+      ]
+     },
+     "execution_count": 241,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_idf = accuracy_score(y_test_idf, y_pred_idf)\n",
+    "precision_idf = precision_score(y_test_idf, y_pred_idf, average='weighted')\n",
+    "f1_idf = f1_score(y_test_idf, y_pred_idf, average='weighted')\n",
+    "recall_idf = recall_score(y_test_idf, y_pred_idf, average='weighted')\n",
+    "sklearn.metrics.roc_auc_score(y_test_idf, y_pred_idf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 242,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.6677681930675364\n",
+      "Precision: 0.6044127803276179\n",
+      "Recall: 0.6677681930675364\n",
+      "F1 Score: 0.5589518496570324\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Accuracy: {accuracy_idf}\")\n",
+    "print(f\"Precision: {precision_idf}\")\n",
+    "print(f\"Recall: {recall_idf}\")\n",
+    "print(f\"F1 Score: {f1_idf}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_tfidf_v2(dict_a, dict_b, dict_c):\n",
+    "    prod = 0\n",
+    "    for key, val in dict_a.items():\n",
+    "        prod += val*dict_b.get(key,0)*dict_c.get(key,0)\n",
+    "    return prod\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 245,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yelp_reviews.loc[:, 'tfidfposv2'] = yelp_reviews.loc[:,'tf'].apply(lambda x: calc_tfidf_v2(x,idf_dict_pos, dict_pos_v1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yelp_reviews.loc[:, 'tfidfnegv2'] = yelp_reviews.loc[:,'tf'].apply(lambda x: calc_tfidf_v2(x,idf_dict_neg, dict_neg_v1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yelp_reviews.loc[:,'tfidfposv2'] = (yelp_reviews.loc[:,'tfidfposv2']-yelp_reviews.loc[:,'tfidfposv2'].mean())/yelp_reviews.loc[:,'tfidfposv2'].std()\n",
+    "yelp_reviews.loc[:,'tfidfnegv2'] = (yelp_reviews.loc[:,'tfidfnegv2']-yelp_reviews.loc[:,'tfidfnegv2'].mean())/yelp_reviews.loc[:,'tfidfnegv2'].std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 248,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_idf_v2 = yelp_reviews.loc[:,['tfidfposv2', 'tfidfnegv2']].to_numpy()\n",
+    "y_idf_v2 = yelp_reviews.loc[:,'starsv1'].to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 250,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf_idf_v2 = LogisticRegression()\n",
+    "X_train_idf_v2, X_test_idf_v2, y_train_idf_v2, y_test_idf_v2 = train_test_split(X_idf_v2, y_idf_v2, test_size=0.2, random_state=42)\n",
+    "clf_idf_v2.fit(X_train_idf_v2, y_train_idf_v2)\n",
+    "y_pred_idf_v2 = clf_idf_v2.predict(X_test_idf_v2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 251,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7739713756017728"
+      ]
+     },
+     "execution_count": 251,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_idf_v2 = accuracy_score(y_test_idf_v2, y_pred_idf_v2)\n",
+    "precision_idf_v2 = precision_score(y_test_idf_v2, y_pred_idf_v2, average='weighted')\n",
+    "f1_idf_v2 = f1_score(y_test_idf_v2, y_pred_idf_v2, average='weighted')\n",
+    "recall_idf_v2 = recall_score(y_test_idf_v2, y_pred_idf_v2, average='weighted')\n",
+    "sklearn.metrics.roc_auc_score(y_test_idf_v2, y_pred_idf_v2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.8172181451439853\n",
+      "Precision: 0.8134494550981025\n",
+      "Recall: 0.8129700445806819\n",
+      "F1 Score: 0.8172181451439853\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Accuracy: {accuracy_idf_v2}\")\n",
+    "print(f\"Precision: {precision_idf_v2}\")\n",
+    "print(f\"Recall: {f1_idf_v2}\")\n",
+    "print(f\"F1 Score: {recall_idf_v2}\")"
    ]
   }
  ],
