Tools for Duplicates and ngrams

--- a/apply_models.ipynb
+++ b/apply_models.ipynb
@@ -158,7 +158,7 @@
     "        min_token_counts[token] = min_token_counts.get(token, 0) + 1\n",
     "        all_tokens.add(token)\n",
     "\n",
-    "# Now we can create a homemmade metric that indicates which tokens are most\n",
+    "# Now we can create a homemade metric that indicates which tokens are most\n",
     "# associated with positive and negative sentiment. We'll just take difference\n",
     "# in how often a token appears in each dictionary. This helps target the most\n",
     "# common tokens while still capturing the differences between the dictionaries.\n",
